adjust action-root for factories which take their actions from the
Fri Nov 14 09:47:13 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/dialogs/gadgets-beast.xml: adjust action-root for factories
        which take their actions from the toplevel.

        * beast-gtk/dialogs/gadgets-standard.xml: support action-root variable
        for gadget factories.

        * beast-gtk/gxk/gxkaction.[hc]: fixed up ActionSet alive keeping and
        action-factory updates. made action-factory updates asyncronous.

        * beast-gtk/gxk/gxkgadget.[hc]: provide access to the toplevel
        gadget being created through gxk_gadget_data_get_scope_gadget().

        * beast-gtk/gxk/gxkgadgetfactory.[hc]: limit the actions matched
        successfully by a toplevel widget below witch the actions have to
        be published (action-root). let the action-root default to the
        scope-gadget (instead of the toplevel GtkWindow).

        * beast-gtk/gxk/gxkutils.[hc]: added gxk_widget_has_ancestor().

        * beast-gtk/bstsupershell.[hc]: removed lots of virtualization.
        added notebook page construction functions for song, snet and wave-repo.

        * beast-gtk/bstsongshell.[hc]:
        * beast-gtk/bstsnetshell.[hc]:
        * beast-gtk/bstwavereposhell.[hc]: removed these files, bstsupershell.c
        constructs the neccessary notebook pages now.

        * beast-gtk/bstapp.[hc]: removed super-shell special casing.

svn path=/trunk/; revision=1512

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -33,7 +33,7 @@ progs_LDADD = $(strip \
 # BEAST header files that don't get installed
 beast_headers = $(strip \
 	bstcanvassource.h	bstapp.h	bstasciipixbuf.h	bstcanvaslink.h	\
-	bstsampleeditor.h	bstsequence.h	bstservermonitor.h	bstsnetshell.h	\
+	bstsampleeditor.h	bstsequence.h	bstservermonitor.h	\
 	bsttrackroll.h		bstcluehunter.h	bstprojectctrl.h	bstxxutils.h	\
 	bstfreeradiobutton.h	bstdragutils.h	bstfiledialog.h		bstgconfig.h	\
 	bstlogadjustment.h	bstitemview.h	bstmarker.h		bstknob.h	\
@@ -43,7 +43,7 @@ beast_headers = $(strip \
 	bstrackeditor.h		bstrackitem.h	bstracktable.h		bstradiotools.h	\
 	bstsnetrouter.h		bstsplash.h	bsttrackview.h		bstsupershell.h	\
 	bstusermessage.h	bstdial.h	bsttracksynthdialog.h	bstwaveeditor.h	\
-	bstwavereposhell.h	bstwaveview.h	bstsongshell.h		bstxkb.h	\
+				bstwaveview.h				bstxkb.h	\
 	bstzoomedwindow.h	glewidgets.h	bsttrackrollctrl.h	bstxframe.h	\
 				bstcatalog.h	bsttreestores.h		bstutils.h	\
 	bstauxdialogs.h		bstsegment.h	bsteventrollctrl.h	bsteventroll.h	\
@@ -52,7 +52,7 @@ beast_headers = $(strip \
 # BEAST c sources to build the program from
 beast_sources = $(strip \
 	bstcanvassource.c	bstapp.c	bstasciipixbuf.c	bstcanvaslink.c	\
-	bstsampleeditor.c	bstsequence.c	bstservermonitor.c	bstsnetshell.c	\
+	bstsampleeditor.c	bstsequence.c	bstservermonitor.c	\
 	bsttrackroll.c		bstcluehunter.c	bstprojectctrl.c	bstxxutils.cc	\
 	bstfreeradiobutton.c	bstdragutils.c	bstfiledialog.c		bstgconfig.c	\
 	bstlogadjustment.c	bstitemview.c	bstmarker.c		bstknob.c	\
@@ -62,7 +62,7 @@ beast_sources = $(strip \
 	bstrackeditor.c		bstrackitem.c	bstracktable.c		bstradiotools.c	\
 	bstsnetrouter.c		bstsplash.c	bsttrackview.c		bstsupershell.c	\
 	bstusermessage.c	bstdial.c	bsttracksynthdialog.c	bstwaveeditor.c	\
-	bstwavereposhell.c	bstwaveview.c	bstsongshell.c		bstxkb.c	\
+				bstwaveview.c				bstxkb.c	\
 	bstzoomedwindow.c	glewidgets.c	bsttrackrollctrl.c	bstxframe.c	\
 				bstcatalog.c	bsttreestores.c		bstutils.c	\
 	bstauxdialogs.c		bstsegment.c	bsteventrollctrl.c	bsteventroll.c	\
