--- a/configure.in
+++ b/configure.in
@@ -559,6 +559,7 @@ bse/tests/Makefile
 plugins/Makefile
 plugins/icons/Makefile
 plugins/freeverb/Makefile
+plugins/evaluator/Makefile
 bsw/Makefile
 shell/Makefile
 beast-gtk/Makefile
