Added evaluator as subdirectory.
Sun Nov 16 18:13:26 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am: Added evaluator as subdirectory.

svn path=/trunk/; revision=1529

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -3,7 +3,7 @@
 #
 ## Makefile.am for BSE Plugins
 
-SUBDIRS = icons . freeverb
+SUBDIRS = icons . freeverb evaluator
 
 CFLAGS   += $(EXTRA_CFLAGS)
 INCLUDES += -I$(top_srcdir) -I. $(BSE_CFLAGS) -DG_LOG_DOMAIN=BSE_PLUGIN_NAME
