removed BST_SIZE_*, there are GXK_ICON_SIZE_* sizes, fixed callers. fixed
Mon Nov 17 23:18:34 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstutils.[hc]: removed BST_SIZE_*, there are GXK_ICON_SIZE_*
        sizes, fixed callers. fixed signature of bst_action_list_from_cats() and
        bst_action_list_add_cat(), changed callers.

        * beast-gtk/dialogs/gadgets-standard.xml: use folder icon for submenus.

        * beast-gtk/gxk/gxkauxwidgets.[hd]: added ::menubar-image boolean toggle
        to auto-hide the menu item image as child of a menubar.

        * beast-gtk/gxk/gxkgadget.[hc]: added special guards to
        gxk_gadget_sensitize() to not make submenus items with empty menu
        sensitive.

        * beast-gtk/gxk/gxkstock.[hc]: made menu item images 24x24 pixels.
        properly renamed sizes to GXK_ICON_SIZE_*.

        * beast-gtk/icons/binote.png: higher resolution mockup.

        * beast-gtk/icons/folder.png: added folder icon from Tuomas Kuosmanen
        <tigert@gimp.org>.

        * beast-gtk/bsteventrollctrl.[hc]:
        * beast-gtk/bstpianorollctrl.[hc]: s/_atools/_rtools/.

        * beast-gtk/bstdefs.h: cleanups.

svn path=/trunk/; revision=1541

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -39,6 +39,7 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_NOTE_ICON			$(srcdir)/binote.png		\
 	STOCK_EDIT_TOOL			$(srcdir)/editor.png		\
 	STOCK_EVENT_CONTROL		$(srcdir)/event-control.png	\
+	STOCK_FOLDER			$(srcdir)/folder.png		\
 	STOCK_INFO			$(srcdir)/bulb.png		\
 	STOCK_INSTRUMENT		$(srcdir)/aguitar.png		\
 	STOCK_KNOB			$(srcdir)/knob.png		\
