fixed unfound actions in the palette popup menu by conditionalizing
Tue Nov 18 22:57:40 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/dialogs/gadgets-beast.xml: fixed unfound actions
        in the palette popup menu by conditionalizing $action-root.

svn path=/trunk/; revision=1552

--- a/beast-gtk/dialogs/Makefile.am
+++ b/beast-gtk/dialogs/Makefile.am
@@ -19,8 +19,8 @@ if MAINTAINER_MODE
 WANT_XMLLINT=xmllint --noout $(XML_FILES)
 endif
 
-beast-xml-zfiles.c:	$(ZINTERN) $(srcdir)/*.xml
-	$(WANT_XMLLINT) 
+beast-xml-zfiles.c:	$(XML_FILES) $(ZINTERN)
+	$(WANT_XMLLINT)
 	$(ZINTERN) -b -z $(ZFILE_DEFS) > xgen-bxc	\
 	&& cp xgen-bxc $@				\
 	&& rm -f xgen-bxc
