use GxkSimpleLabel for <label/>, configured to use underlines and
Fri Nov 21 01:48:34 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/dialogs/gadgets-standard.xml: use GxkSimpleLabel for <label/>,
        configured to use underlines and auto-cut.

        * beast-gtk/gxk/gxksimplelabel.[hc]: new widget, deduced from GtkLabel
        code. Changes relative to GtkLabel:
        - lots of code got stripped (basically for selecting text and handling events)
        - simple-label derives from GtkWidget instead of GtkMisc
        - mnemonic activation works on activatable parents even if group cycling
        - setting ::pattern properly unsets ::use-underline
        - if ::auto-cut is TRUE, overfull text is cut-off

        * po-bse/POTFILES.in: removed encoding: UTF-8, which breaks the Makefiel due to
        intl-tools only handling po/ correctly ;(

svn path=/trunk/; revision=1562

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -20,7 +20,7 @@ gxk_headers = $(strip \
 	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxklistwrapper.h \
 			gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
 	gxkgadget.h	gxkaction.h	gxkglobals.h	gxkgadgetfactory.h \
-	glewidgets.h	\
+	glewidgets.h					gxksimplelabel.h \
 	gxk.h \
 )
 gxk_c_sources = $(strip \
@@ -28,7 +28,7 @@ gxk_c_sources = $(strip \
 	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxklistwrapper.c \
 			gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
 	gxkgadget.c	gxkaction.c	gxkglobals.c	gxkgadgetfactory.c \
-	glewidgets.c	\
+	glewidgets.c					gxksimplelabel.c \
 )
 gxk_extra_sources = $(strip \
 	gxkmarshal.list \
