Updated Serbian translation.
2003-11-23  Danilo Å egan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added beast-gtk/gxk/gxksimplelabel.c.

svn path=/trunk/; revision=1567

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,5 +28,6 @@ beast-gtk/bstwaveeditor.c
 beast-gtk/bstwaveview.c
 beast-gtk/dialogs/gadgets-beast.xml
 beast-gtk/dialogs/gadgets-standard.xml
+beast-gtk/gxk/gxksimplelabel.c
 data/beast.desktop.in
 data/bse.keys.in
