Added (template) classes for SmartPtr, RefCountable, Sequence, ... used
Wed Nov 26 13:40:11 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h: Added (template) classes for SmartPtr, RefCountable,
	Sequence, ... used for records.

	* tests/testsmart.cc: Test for the smartpointer stuff.

	* Makefile.am tests/Makefile.am: Corresponding Makefile entries.

svn path=/trunk/; revision=1578

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -60,7 +60,7 @@ bse_public_h_sources = $(strip \
 	bsecompat.h		bseundostack.h		bsemidiinput.h			bsemididecoder.h \
 	bsenote.h		\
 	bsecxxvalue.h		bsecxxutils.h		bsecxxbase.h			bsecxxclosure.h \
-	bsecxxarg.h		bsecxxmodule.h		bsecxxplugin.h			\
+	bsecxxarg.h		bsecxxmodule.h		bsecxxplugin.h			bsecxxsmart.h \
 )
 # BSE header files that don't get installed
 bse_private_h_sources = $(strip \
