--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -9,7 +9,7 @@ INCLUDES += -I$(top_srcdir) -I$(top_builddir) $(SFI_CFLAGS)
 
 DEFS += -DG_LOG_DOMAIN=\"BSE-TEST\" # -DG_DISABLE_CONST_RETURNS
 
-TESTS = testfft testcxx testwavechunk
+TESTS = testfft testcxx testsmart testwavechunk
 progs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 testwavechunk_SOURCES = testwavechunk.c cxxdummy.cc
 testwavechunk_LDADD = $(progs_ldadd)
@@ -17,6 +17,8 @@ testfft_SOURCES = testfft.c cxxdummy.cc
 testfft_LDADD = $(progs_ldadd)
 testcxx_SOURCES = testcxx.cc
 testcxx_LDADD = $(progs_ldadd)
+testsmart_SOURCES = testsmart.cc
+testsmart_LDADD = $(progs_ldadd)
 
 noinst_PROGRAMS = cutvorbis magictest mathtests $(TESTS) #testwavechunk
 cutvorbis_SOURCES = cutvorbis.c cxxdummy.cc
