Added tests directory.
Fri Nov 28 00:55:55 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in Makefile.am: Added tests directory.

	* tests/Makefile.am tests/cxxbinding.cc: A test for the C++ binding.

svn path=/trunk/; revision=1586

--- a/configure.in
+++ b/configure.in
@@ -574,6 +574,7 @@ library/effects/Makefile
 library/instruments/Makefile
 library/scripts/Makefile
 library/demo/Makefile
+tests/Makefile
 data/Makefile
 data/sfi.pc
 data/bse.pc
