rewrote cxxapi generation rules. added hacks to work around missing
Fri Nov 28 03:13:09 2003  Tim Janik  <timj@gtk.org>

        * tests/Makefile.am: rewrote cxxapi generation rules.
        added hacks to work around missing std::string and sfi_value_get_cxxstring().

        * tests/cxxbinding.cc: include bsecxxapi.h.

svn path=/trunk/; revision=1589

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,50 +16,51 @@ SFIDL = $(top_builddir)/sfi/sfidl
 #
 # setup autogeneration dependancies
 # 
-gen_sources = xgen-bah xgen-bac
+gen_sources = xgen-bcah xgen-bcac
 CLEANFILES += $(gen_sources)
-:r
+
 # initial creation of the real stamp-* files
-bseapi.h: stamp-bseapi.h ;
 # normal autogeneration rules
-stamp-bseapi.h: $(top_builddir)/bse/bse.idl $(SFIDL)
-	echo -e "#include <sfi/sfi.h>\n" > xgen-bah \
-	&& $(SFIDL) --cxx --header --interface --prefix beast_ $(top_builddir)/bse/bse.idl >> xgen-bah \
-	&& (cmp -s xgen-bah bseapi.h || cp xgen-bah bseapi.h) \
-	&& rm -f xgen-bah \
-	&& echo timestamp > $@
-bseapi.cc: bseapi.h $(top_builddir)/bse/bse.idl $(SFIDL)
-	echo -e "#include \"bseapi.h\"\n" > xgen-bac \
-	&& $(SFIDL) --cxx --source --interface --prefix beast_ $(top_builddir)/bse/bse.idl >> xgen-bac \
-	&& cp xgen-bac $@ \
-	&& rm -f xgen-bac
+bsecxxapi.h: $(top_builddir)/bse/bse.idl $(SFIDL)
+	cd . \
+	&& echo -e "#include <bse/bsecxxsmart.h>\n" > xgen-bcah \
+	&& echo -e "#include <string>\n" >> xgen-bcah \
+	&& echo -e "extern inline std::string sfi_value_get_cxxstring(GValue*v) { return std::string (sfi_value_get_string (v)); }" >> xgen-bcah \
+	&& $(SFIDL) --cxx --header --interface --prefix test_ $(top_builddir)/bse/bse.idl >> xgen-bcah \
+	&& cp xgen-bcah $@ \
+	&& rm -f xgen-bcah
+bsecxxapi.cc: bsecxxapi.h $(top_builddir)/bse/bse.idl $(SFIDL)
+	cd . \
+	&& echo -e "#include \"bsecxxapi.h\"\n" > xgen-bcac \
+	&& $(SFIDL) --cxx --source --interface --prefix test_ $(top_builddir)/bse/bse.idl >> xgen-bcac \
+	&& cp xgen-bcac $@ \
+	&& rm -f xgen-bcac
+CLEANFILES += bsecxxapi.h bsecxxapi.cc
 
 # source to built, that don't get installed
 tests_built_sources = @STRIP_BEGIN@ \
-	stamp-bswgenapi.h \
-	bseapi.cc \
-	bseapi.h \
+	bsecxxapi.cc \
+	bsecxxapi.h \
 @STRIP_END@
 
 #
 # convenience targets for the builtsources
 #
-.PHONY: builtsources clean-builtsources
-clean-builtsources:
+.PHONY: generated clean-generated
+clean-generated:
 	cd $(srcdir) \
 	&& rm -f $(tests_built_sources)
 	rm -f $(tests_built_sources)
-builtsources: $(tests_built_sources)
+generated: $(tests_built_sources)
 
 #
-# the test programs, finally:
+# the test programs:
 #
 TESTS = cxxbinding
 progs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
-cxxbinding_SOURCES = cxxbinding.cc bseapi.cc
+cxxbinding_SOURCES = cxxbinding.cc bsecxxapi.cc
 cxxbinding_LDADD = $(progs_ldadd)
-
-$(srcdir)/cxxbinding.cc: bseapi.h
+$(srcdir)/cxxbinding.cc: bsecxxapi.h
 
 noinst_PROGRAMS = $(TESTS)
 
