new files containing editing functionality of GxkRackTable. started
Sat Nov 29 06:13:27 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkrackeditor.[hc]: new files containing editing
        functionality of GxkRackTable. started implementing rack item
        resizing. switched to using gxk_grab_pointer_and_keyboard() for
        pointer grabs. moved editing fields out of GxkRackTable into
        a seperate GxkRackEditor structure.

        * beast-gtk/gxk/gxkrackitem.[hc]: added gxk_rack_item_set_area()
        which updates the attachment coordinates of a GxkRackItem. made
        coordinates original gints in the GxkRackItem structure.

        * beast-gtk/gxk/gxkracktable.[ch]: removed non-editing parts.
        hooked up GxkRackEditor functions. switched to using GBitMatrix
        for the child map. switched to lazy child-map updates.
        exposed a couple static functions. changed add-child logic
        to properly honour child requisition if possible.

        * beast-gtk/gxk/gxkutils.[hc]: added gxk_grab_pointer_and_keyboard()
        and gxk_ungrab_pointer_and_keyboard().

svn path=/trunk/; revision=1598

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -18,7 +18,7 @@ noinst_LIBRARIES = libgxk.a
 gxk_headers = $(strip \
 	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkauxwidgets.h \
 	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxklistwrapper.h \
-			gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
+	gxkrackeditor.h	gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
 	gxkgadget.h	gxkaction.h	gxkglobals.h	gxkgadgetfactory.h \
 	glewidgets.h	gxkracktable.h	gxkrackitem.h	gxksimplelabel.h \
 	gxk.h \
@@ -26,7 +26,7 @@ gxk_headers = $(strip \
 gxk_c_sources = $(strip \
 	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkauxwidgets.c \
 	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxklistwrapper.c \
-			gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
+	gxkrackeditor.c	gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
 	gxkgadget.c	gxkaction.c	gxkglobals.c	gxkgadgetfactory.c \
 	glewidgets.c	gxkracktable.c	gxkrackitem.c	gxksimplelabel.c \
 )
