don't error out on SfiRec arguments.
Tue Dec  2 23:28:37 2003  Tim Janik  <timj@gtk.org>

        * bse/bseprocidl.cc: don't error out on SfiRec arguments.

        * bseitem.[hc]: renamed bse_item_uncross() to bse_item_uncross_links().

        * bseparasite.[hc]: implemented new undo-able parasite interface,
        which supports SfiRec as parasite data and uses a file-path alike
        nameing scheme for the parasites. storage not yet implemented.

svn path=/trunk/; revision=1611

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -108,6 +108,7 @@ bse_proc_sources = $(strip \
 	bsemidinotifier.proc \
 	bsejanitor.proc \
 	bsepart.proc \
+	bseparasite.proc \
 	bseprocedure.proc \
 	bseproject.proc \
 	bsescripthelper.proc \
@@ -131,6 +132,7 @@ bse_proc_gen_sources = $(strip \
 	bsemidinotifier.gen-proc.c \
 	bsejanitor.gen-proc.c \
 	bsepart.gen-proc.c \
+	bseparasite.gen-proc.c \
 	bseprocedure.gen-proc.c \
 	bseproject.gen-proc.c \
 	bsescripthelper.gen-proc.c \
