disabled code depending on BstRackItem.
Fri Dec  5 00:28:12 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstrackeditor.[hc]: disabled code depending on BstRackItem.

        * beast-gtk/bstracktable.[hc]: disabled code depending on BstRackItem.

        * beast-gtk/bstrackitem.[hc]: derive from GxkRackItem. removed
        controller handling code.

        * beast-gtk/bstsupershell.c: added rack-view notebook page to SynthNets.

        * beast-gtk/dialogs/gadgets-beast.xml: added rack-view GUI description.

        * beast-gtk/dialogs/gadgets-standard.xml: support rack-table and
        rack-item. fixed up some button properties.

        * beast-gtk/gxk/gxkgadget.c: support rack table and item types.

        * beast-gtk/gxk/gxkrackeditor.c: fixed up return value for button
        presses. removed auto cover/uncover upon editing edit mode.

svn path=/trunk/; revision=1612

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -45,7 +45,7 @@ beast_headers = $(strip \
 	bstusermessage.h	bstdial.h	bsttracksynthdialog.h	bstwaveeditor.h	\
 				bstwaveview.h				bstxkb.h	\
 	bstzoomedwindow.h			bsttrackrollctrl.h	bstxframe.h	\
-						bsttreestores.h		bstutils.h	\
+				bstrackview.h	bsttreestores.h		bstutils.h	\
 	bstauxdialogs.h		bstsegment.h	bsteventrollctrl.h	bsteventroll.h	\
 	bstmarshal.h bstdefs.h \
 )
@@ -64,7 +64,7 @@ beast_sources = $(strip \
 	bstusermessage.c	bstdial.c	bsttracksynthdialog.c	bstwaveeditor.c	\
 				bstwaveview.c				bstxkb.c	\
 	bstzoomedwindow.c			bsttrackrollctrl.c	bstxframe.c	\
-						bsttreestores.c		bstutils.c	\
+				bstrackview.c	bsttreestores.c		bstutils.c	\
 	bstauxdialogs.c		bstsegment.c	bsteventrollctrl.c	bsteventroll.c	\
 	$(PROFILE_SOURCE) \
 )
