Updated Serbian translation.
2003-12-07  Danilo Å egan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added missing files.

svn path=/trunk/; revision=1620

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,6 +17,7 @@ beast-gtk/bstprocedure.c
 beast-gtk/bstprojectctrl.c
 beast-gtk/bstrackeditor.c
 beast-gtk/bstrackitem.c
+beast-gtk/bstrackview.c
 beast-gtk/bstsampleeditor.c
 beast-gtk/bstsnetrouter.c
 beast-gtk/bststest.c
@@ -28,6 +29,7 @@ beast-gtk/bstwaveeditor.c
 beast-gtk/bstwaveview.c
 beast-gtk/dialogs/gadgets-beast.xml
 beast-gtk/dialogs/gadgets-standard.xml
+beast-gtk/gxk/gxkparam-entry.c
 beast-gtk/gxk/gxksimplelabel.c
 data/beast.desktop.in
 data/bse.keys.in
