define GXK_COMPILATION when compiling GXK.
Wed Dec 10 08:34:10 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/Makefile.am: define GXK_COMPILATION when compiling GXK.

	* beast-gtk/gxk/gxkglobals.h: provide i18n macros for GXK_COMPILATION.

	* beast-gtk/gxk/gxkparam.[hc]: relicensed LGPL.
	reused parts of the BstParam implementation to implement GxkParam.
	GxkParam is a compound consisting of a pspec, a value and a binding
	(to the target affected by the value).
	imlpemented simple in-param GValue binding.
	implemented seperate GxkParamEditor interface which allowes creation
	of editing widgets for GxkParams.
	added functions to implement logic shared by many editor
	implementations (e.g. GtkAdjustment creation).

	* beast-gtk/gxk/gxksimplelabel.c: changed use-underline
	default to FALSE.

	* beast-gtk/gxk/gxkutils.[hc]: added gxk_option_menu_set_menu(), a
	replacement for gtk_option_menu_set_menu() to allow accelerators in
	menus. added g_option_check() wrappers to support options on
	widgets: gxk_widget_add_option(), gxk_widget_check_option() and
	gxk_widget_get_options().
	(menu_position_func): fixed up push_in logic for gxk_menu_popup().
	(gxk_widget_add_font_requisition): new function, adding up to a widgets
	requisition the size required by a certain amount of characters and
	digits.

	* beast-gtk/gxk/gxkparam-spinner.c:
	* beast-gtk/gxk/gxkparam-toggle.c:
	* beast-gtk/gxk/gxkparam-scale.c:
	* beast-gtk/gxk/gxkparam-label.c:
	* beast-gtk/gxk/gxkparam-entry.c: relicensed LGPL. removed cruft and
	cleaned up code, ported to GxkParam.

	* beast-gtk/gxk/gxkparam-toggle.c: determine toggle/check/radio
	appearance from pspec options.

	* beast-gtk/gxk/gxkparam-spinner.c: added type dependant size
	requisition.

	* beast-gtk/gxk/gxkparam-label.c: support pspec name as well as string
	parameter display.

	* beast-gtk/gxk/gxkauxwidgets.[hc]: implemented free-radio-button,
	added ::push-in property to menu-buttons (similar to the push-in
	behaviour option-menus always 

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -8,8 +8,9 @@ SUBDIRS =
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) -I$(top_srcdir)/beast-gtk $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
 
 DEFS += $(strip \
-	-DGTK_DISABLE_COMPAT_H \
-	-DG_LOG_DOMAIN=\"GXK\" \
+	-DGTK_DISABLE_COMPAT_H 	\
+	-DGXK_COMPILATION	\
+	-DG_LOG_DOMAIN=\"GXK\" 	\
 )
 # -DGTK_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN
 
@@ -21,7 +22,7 @@ gxk_headers = $(strip \
 	gxkrackeditor.h	gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
 	gxkgadget.h	gxkaction.h	gxkglobals.h	gxkgadgetfactory.h \
 	glewidgets.h	gxkracktable.h	gxkrackitem.h	gxksimplelabel.h \
-	gxklogadjustment.h		\
+	gxkparam.h					gxklogadjustment.h \
 	gxk.h \
 )
 gxk_c_sources = $(strip \
@@ -30,7 +31,7 @@ gxk_c_sources = $(strip \
 	gxkrackeditor.c	gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
 	gxkgadget.c	gxkaction.c	gxkglobals.c	gxkgadgetfactory.c \
 	glewidgets.c	gxkracktable.c	gxkrackitem.c	gxksimplelabel.c \
-	gxklogadjustment.c		\
+	gxkparam.c					gxklogadjustment.c \
 )
 gxk_extra_sources = $(strip \
 	gxkmarshal.list \
