--- a/configure.in
+++ b/configure.in
@@ -109,7 +109,11 @@ dnl Define package requirements.
 dnl
 AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
+    dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
+    dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
     ALL_LINGUAS="az ca de el es nl pt sr sr@Latn sv ru"
+    dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
+    dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
     AC_SUBST(ALL_LINGUAS)
 
     dnl versioned BEAST gettext domain (po/)
