added DavBassFilter icon.
Wed Dec 17 19:23:56 2003  Tim Janik  <timj@gtk.org>

        * icons/davbassfilter.png: added DavBassFilter icon.

        * davbassfilter.idl:
        * davbassfilter.cc: ported DavBassFilter.

        * davbassfilter.[hc]: removed old DavBassFilter code.

svn path=/trunk/; revision=1680

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -18,6 +18,7 @@ plugin_idl_files = $(strip	\
 	davchorus.idl		\
 	bsebalance.idl		\
 	artscompressor.idl	\
+	davbassfilter.idl	\
 )
 EXTRA_HEADERS += $(plugin_idl_files)
 # setup generation of C++ plugins from idl files
@@ -33,7 +34,6 @@ Makefile.plugins: $(srcdir)/listplugins.sh $(PLUGIN_CFILES) Makefile.am
 # old/unported plugin list
 UNPORTED = $(strip		\
 	bsefirfilter.[hc]	\
-	davbassfilter.[hc]	\
 	davguitar.[hc]		\
 )
 PLUGIN_CFILES = $(strip		\
