--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -25,6 +25,7 @@ icon_list += atan.png
 icon_list += balance.png
 icon_list += canyon.png
 icon_list += chorus.png
+icon_list += davbassfilter.png
 icon_list += drum.png
 icon_list += eguitar.png
 icon_list += filter.png
