--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -50,5 +50,6 @@ data/bse.keys.in
 plugins/artscompressor.idl
 plugins/bsebalance.idl
 plugins/bseiirfilter.c
+plugins/davbassfilter.idl
 plugins/davchorus.idl
 plugins/evaluator/bseevaluator.idl
